# ifood-token-generator

./: Dockerfile  Makefile  pyproject.toml  requirements.txt
scripts/: dev.sh  docker-entrypoint.sh  lint.sh  setup.sh
src/app/: ifood.py  main.py  settings.py
