[tool.poetry]
name = "ifood-token-generator"
version = "0.1.0"
description = ""
authors = ["Jairo <jairo.araujo.silva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
streamlit = "^1.31.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
ruff = "^0.3.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
